Remove bottom CTA block and point action buttons to Xiaohongshu

--- a/index.html
+++ b/index.html
@@ -430,30 +430,6 @@
       font-size: 14px;
     }
 
-    .cta {
-      margin: 26px 0 34px;
-      background: linear-gradient(145deg, #122033, #1b2f4b);
-      color: #fff;
-      border-radius: 20px;
-      padding: 24px;
-      box-shadow: var(--shadow);
-      display: grid;
-      grid-template-columns: 1fr auto;
-      align-items: center;
-      gap: 14px;
-    }
-
-    .cta h3 {
-      margin: 0 0 8px;
-      font-size: clamp(22px, 3vw, 34px);
-      letter-spacing: -0.2px;
-    }
-
-    .cta p {
-      margin: 0;
-      color: rgba(255, 255, 255, .82);
-    }
-
     .footer {
       padding: 10px 0 34px;
       color: #6a7f95;
@@ -483,10 +459,6 @@
         grid-template-columns: 1fr;
       }
 
-      .cta {
-        grid-template-columns: 1fr;
-      }
-
       .price-card.popular {
         transform: none;
       }
@@ -505,7 +477,7 @@
   <header class="topbar">
     <div class="wrap topbar-inner">
       <div class="brand">Factor Lab<small>巴菲特战法（研究版）</small></div>
-      <a class="nav-btn" href="#buy">评论领试用</a>
+      <a class="nav-btn" href="https://www.xiaohongshu.com/" target="_blank" rel="noopener noreferrer">评论领试用</a>
     </div>
   </header>
 
@@ -519,7 +491,7 @@
           也不需要配置复杂参数。小红书评论区输入“试用”，即可领取体验版。
         </p>
         <div class="hero-actions">
-          <a class="btn btn-primary" href="#buy">评论“试用”领取免费版</a>
+          <a class="btn btn-primary" href="https://www.xiaohongshu.com/" target="_blank" rel="noopener noreferrer">评论“试用”领取免费版</a>
           <a class="btn btn-secondary" href="#plans">查看版本与价格</a>
         </div>
       </div>
@@ -637,7 +609,7 @@
             <li>基础体检结果页（无导出）</li>
             <li>仅显示前3只候选</li>
           </ul>
-          <a class="btn btn-secondary" href="#buy">领取试用</a>
+          <a class="btn btn-secondary" href="https://www.xiaohongshu.com/" target="_blank" rel="noopener noreferrer">领取试用</a>
         </article>
 
         <article class="price-card popular">
@@ -650,7 +622,7 @@
             <li>使用说明 + 7天答疑</li>
             <li>30天小版本更新</li>
           </ul>
-          <a class="btn btn-primary" href="#buy">购买研究版</a>
+          <a class="btn btn-primary" href="https://www.xiaohongshu.com/" target="_blank" rel="noopener noreferrer">购买研究版</a>
         </article>
 
         <article class="price-card">
@@ -662,7 +634,7 @@
             <li>30天参数更新</li>
             <li>30天答疑支持</li>
           </ul>
-          <a class="btn btn-secondary" href="#buy">购买增强包</a>
+          <a class="btn btn-secondary" href="https://www.xiaohongshu.com/" target="_blank" rel="noopener noreferrer">购买增强包</a>
         </article>
       </div>
       <div class="note">
@@ -733,14 +705,6 @@
           <p>不需要，普通用户按说明操作即可。你只要会输入股票代码。</p>
         </details>
       </div>
-    </section>
-
-    <section id="buy" class="cta reveal">
-      <div>
-        <h3>现在就去小红书：评论“试用”领取体验版</h3>
-        <p>把按钮替换成你的店铺链接。先用评论+私信拿线索，再承接39元服务单。</p>
-      </div>
-      <a class="btn btn-primary" href="https://www.xiaohongshu.com/" target="_blank" rel="noopener noreferrer">打开小红书店铺</a>
     </section>
 
     <footer class="footer">
