--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
   <header class="topbar">
     <div class="wrap topbar-inner">
       <div class="brand">Factor Lab<small>巴菲特战法（研究版）</small></div>
-      <a class="nav-btn" href="https://www.xiaohongshu.com/" target="_blank" rel="noopener noreferrer">评论领试用</a>
+      <a class="nav-btn" href="https://xhslink.com/m/80EYiAQzo6G" target="_blank" rel="noopener noreferrer">评论领试用</a>
     </div>
   </header>
 
@@ -491,7 +491,7 @@
           也不需要配置复杂参数。小红书评论区输入“试用”，即可领取体验版。
         </p>
         <div class="hero-actions">
-          <a class="btn btn-primary" href="https://www.xiaohongshu.com/" target="_blank" rel="noopener noreferrer">评论“试用”领取免费版</a>
+          <a class="btn btn-primary" href="https://xhslink.com/m/80EYiAQzo6G" target="_blank" rel="noopener noreferrer">评论“试用”领取免费版</a>
           <a class="btn btn-secondary" href="#plans">查看版本与价格</a>
         </div>
       </div>
@@ -609,7 +609,7 @@
             <li>基础体检结果页（无导出）</li>
             <li>仅显示前3只候选</li>
           </ul>
-          <a class="btn btn-secondary" href="https://www.xiaohongshu.com/" target="_blank" rel="noopener noreferrer">领取试用</a>
+          <a class="btn btn-secondary" href="https://xhslink.com/m/80EYiAQzo6G" target="_blank" rel="noopener noreferrer">领取试用</a>
         </article>
 
         <article class="price-card popular">
@@ -622,7 +622,7 @@
             <li>使用说明 + 7天答疑</li>
             <li>30天小版本更新</li>
           </ul>
-          <a class="btn btn-primary" href="https://www.xiaohongshu.com/" target="_blank" rel="noopener noreferrer">购买研究版</a>
+          <a class="btn btn-primary" href="https://xhslink.com/m/80EYiAQzo6G" target="_blank" rel="noopener noreferrer">购买研究版</a>
         </article>
 
         <article class="price-card">
@@ -634,7 +634,7 @@
             <li>30天参数更新</li>
             <li>30天答疑支持</li>
           </ul>
-          <a class="btn btn-secondary" href="https://www.xiaohongshu.com/" target="_blank" rel="noopener noreferrer">购买增强包</a>
+          <a class="btn btn-secondary" href="https://xhslink.com/m/80EYiAQzo6G" target="_blank" rel="noopener noreferrer">购买增强包</a>
         </article>
       </div>
       <div class="note">
