Add official free (0 yuan) anti-resale messaging across web, app, and SOP

--- a/index.html
+++ b/index.html
@@ -365,6 +365,18 @@
       line-height: 1.6;
     }
 
+    .free-alert {
+      margin-top: 12px;
+      padding: 10px 12px;
+      border-radius: 10px;
+      border: 1px solid #f3b3b3;
+      background: #fff0f0;
+      color: #8b1d1d;
+      font-size: 13px;
+      line-height: 1.6;
+      font-weight: 700;
+    }
+
     .compare-wrap {
       background: #fff;
       border: 1px solid var(--line);
@@ -477,7 +489,7 @@
   <header class="topbar">
     <div class="wrap topbar-inner">
       <div class="brand">Factor Lab<small>巴菲特战法（研究版）</small></div>
-      <a class="nav-btn" href="https://github.com/xavierchuan/stock/releases/download/v0.1.0-lite/buffett_lite_trial_20260212.zip" target="_blank" rel="noopener noreferrer">下载免费版</a>
+      <a class="nav-btn" href="https://github.com/xavierchuan/stock/releases/download/v0.1.0-lite/buffett_lite_trial_20260212.zip" target="_blank" rel="noopener noreferrer">下载免费版(0元)</a>
     </div>
   </header>
 
@@ -494,6 +506,7 @@
           <a class="btn btn-primary" href="https://github.com/xavierchuan/stock/releases/download/v0.1.0-lite/buffett_lite_trial_20260212.zip" target="_blank" rel="noopener noreferrer">下载免费体验版</a>
           <a class="btn btn-secondary" href="#plans">查看版本与价格</a>
         </div>
+        <div class="free-alert">官方声明：Lite 体验版长期免费（0元）。任何收费售卖 Lite 安装包均非官方行为。</div>
       </div>
       <aside class="hero-card reveal">
         <div style="font-size:13px;color:rgba(255,255,255,.75);">示例：今日体检结果</div>
@@ -638,7 +651,7 @@
         </article>
       </div>
       <div class="note">
-        提示：仅供研究与教育用途，不构成投资建议，不承诺收益。
+        提示：Lite 体验版官方售价 0 元；请勿为免费安装包付费。仅供研究与教育用途，不构成投资建议，不承诺收益。
       </div>
     </section>
 
@@ -699,6 +712,10 @@
         <details>
           <summary>免费版为什么会有次数和展示限制？</summary>
           <p>免费版用于体验流程，帮你先验证是否适合。需要完整榜单和导出功能时再升级研究版。</p>
+        </details>
+        <details>
+          <summary>有人卖这个 Lite 安装包靠谱吗？</summary>
+          <p>不建议购买。Lite 体验版官方长期免费（0元），请以本页下载链接为准。</p>
         </details>
         <details>
           <summary>我需要会编程吗？</summary>
