Switch Lite download links to dl.dlc39degree.com

--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
   <header class="topbar">
     <div class="wrap topbar-inner">
       <div class="brand">Factor Lab<small>巴菲特战法（研究版）</small></div>
-      <a class="nav-btn" data-link="download" href="https://github.com/xavierchuan/stock/releases/download/v0.1.0-lite/buffett_lite_trial_20260212.zip" target="_blank" rel="noopener noreferrer">下载免费版(0元)</a>
+      <a class="nav-btn" data-link="download" href="https://dl.dlc39degree.com/buffett_lite_trial_20260212.zip" target="_blank" rel="noopener noreferrer">下载免费版(0元)</a>
     </div>
   </header>
 
@@ -515,7 +515,7 @@
           就能看到综合分、风险标签和一句话解释。跑不通可直接走39元安装服务承接。
         </p>
         <div class="hero-actions">
-          <a class="btn btn-primary" data-link="download" href="https://github.com/xavierchuan/stock/releases/download/v0.1.0-lite/buffett_lite_trial_20260212.zip" target="_blank" rel="noopener noreferrer">下载免费体验版（0元）</a>
+          <a class="btn btn-primary" data-link="download" href="https://dl.dlc39degree.com/buffett_lite_trial_20260212.zip" target="_blank" rel="noopener noreferrer">下载免费体验版（0元）</a>
           <a class="btn btn-secondary" href="#plans">查看版本与价格</a>
         </div>
         <div class="free-alert">官方声明：Lite 体验版长期免费（0元）。任何收费售卖 Lite 安装包均非官方行为。</div>
@@ -634,7 +634,7 @@
             <li>基础体检结果页（无导出）</li>
             <li>仅显示前3只候选</li>
           </ul>
-          <a class="btn btn-secondary" data-link="download" href="https://github.com/xavierchuan/stock/releases/download/v0.1.0-lite/buffett_lite_trial_20260212.zip" target="_blank" rel="noopener noreferrer">下载免费版</a>
+          <a class="btn btn-secondary" data-link="download" href="https://dl.dlc39degree.com/buffett_lite_trial_20260212.zip" target="_blank" rel="noopener noreferrer">下载免费版</a>
         </article>
 
         <article class="price-card">
@@ -782,7 +782,7 @@
   </main>
 
   <script>
-    const DOWNLOAD_URL = "https://github.com/xavierchuan/stock/releases/download/v0.1.0-lite/buffett_lite_trial_20260212.zip";
+    const DOWNLOAD_URL = "https://dl.dlc39degree.com/buffett_lite_trial_20260212.zip";
     const XHS_URL = "https://xhslink.com/m/80EYiAQzo6G";
     const AI_WAITLIST_URL = XHS_URL;
 
